quic/s2n-quic-transport/src/space/rx_packet_numbers/snapshots/s2n_quic_transport__space__rx_packet_numbers__ack_manager__tests__AckManager.snap
---
source: quic/s2n-quic-transport/src/space/rx_packet_numbers/ack_manager.rs
expression: "size_of::<AckManager>()"
---
144
