quic/s2n-quic-transport/src/space/rx_packet_numbers/snapshots/s2n_quic_transport__space__rx_packet_numbers__ack_manager__tests__delayed_client_sending_test.snap
---
source: quic/s2n-quic-transport/src/space/rx_packet_numbers/ack_manager.rs
expression: "Simulation{network:\n               Network{client:\n                           Application::new(Endpoint::new(AckSettings{max_ack_delay:\n                                                                          Duration::from_millis(25),\n                                                                      ack_delay_exponent:\n                                                                          1,}),\n                                            [Duration::from_millis(5)].iter().cycle().take(100).cloned()).into(),\n                       server:\n                           Application::new(Endpoint::new(AckSettings{max_ack_delay:\n                                                                          Duration::from_millis(25),\n                                                                      ack_delay_exponent:\n                                                                          1,}),\n                                            empty()).into(),},\n           events: empty().collect(),\n           delay: Duration::from_millis(100),}.run()"
---
Report {
    client: EndpointReport {
        pending_ack_ranges: AckRanges(
            {
                PacketNumber(
                    ApplicationData,
                    11,
                )..=PacketNumber(
                    ApplicationData,
                    19,
                ),
            },
        ),
        total_transmissions: 102,
        ack_eliciting_transmissions: 100,
        ack_transmissions: 13,
        congested_transmissions: 0,
        dropped_transmissions: 0,
        delayed_transmissions: 0,
        processed_transmissions: 102,
    },
    server: EndpointReport {
        pending_ack_ranges: AckRanges(
            {
                PacketNumber(
                    ApplicationData,
                    100,
                )..=PacketNumber(
                    ApplicationData,
                    101,
                ),
            },
        ),
        total_transmissions: 20,
        ack_eliciting_transmissions: 4,
        ack_transmissions: 20,
        congested_transmissions: 0,
        dropped_transmissions: 0,
        delayed_transmissions: 0,
        processed_transmissions: 20,
    },
    iterations: 127,
}
