quic/s2n-quic-transport/src/space/rx_packet_numbers/snapshots/s2n_quic_transport__space__rx_packet_numbers__ack_manager__tests__lossy_network_test.snap
---
source: quic/s2n-quic-transport/src/space/rx_packet_numbers/ack_manager.rs
expression: "Simulation{network:\n               Network{client:\n                           Application::new(Endpoint::new(AckSettings{max_ack_delay:\n                                                                          Duration::from_millis(25),\n                                                                      ack_delay_exponent:\n                                                                          1,}),\n                                            [Duration::from_millis(5)].iter().cycle().take(100).cloned()).into(),\n                       server:\n                           Application::new(Endpoint::new(AckSettings{max_ack_delay:\n                                                                          Duration::from_millis(100),\n                                                                      ack_delay_exponent:\n                                                                          1,}),\n                                            [Duration::from_millis(5)].iter().cycle().take(100).cloned()).into(),},\n           events:\n               once(NetworkEvent::Pass).cycle().take(4).chain(once(NetworkEvent::Drop)).collect(),\n           delay: Duration::from_millis(0),}.run()"
---
Report {
    client: EndpointReport {
        pending_ack_ranges: AckRanges(
            {
                PacketNumber(
                    ApplicationData,
                    98,
                )..=PacketNumber(
                    ApplicationData,
                    98,
                ),
            },
        ),
        total_transmissions: 100,
        ack_eliciting_transmissions: 80,
        ack_transmissions: 60,
        congested_transmissions: 0,
        dropped_transmissions: 20,
        delayed_transmissions: 0,
        processed_transmissions: 80,
    },
    server: EndpointReport {
        pending_ack_ranges: AckRanges(
            {
                PacketNumber(
                    ApplicationData,
                    99,
                )..=PacketNumber(
                    ApplicationData,
                    99,
                ),
            },
        ),
        total_transmissions: 100,
        ack_eliciting_transmissions: 80,
        ack_transmissions: 60,
        congested_transmissions: 0,
        dropped_transmissions: 20,
        delayed_transmissions: 0,
        processed_transmissions: 80,
    },
    iterations: 181,
}
